--- a/BusinessSystem-App/docker-compose.yml
+++ b/BusinessSystem-App/docker-compose.yml
@@ -48,6 +48,14 @@ services:
                 - '-p${DB_PASSWORD}'
             retries: 3
             timeout: 5s
+
+    adminer:
+        image: adminer:4.7.5
+        restart: always
+        ports:
+            - 8081:8080
+        networks:
+            - sail
 networks:
     sail:
         driver: bridge
