--- a/BusinessSystem-App/composer.json
+++ b/BusinessSystem-App/composer.json
@@ -14,7 +14,8 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "laravel/wayfinder": "^0.1.9",
-        "maatwebsite/excel": "^3.1"
+        "maatwebsite/excel": "^3.1",
+        "maennchen/zipstream-php": "^3.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
